--- a/css/style_s.css
+++ b/css/style_s.css
@@ -72,7 +72,7 @@
     right: -10px;
     width: calc(100% + 20px);
     height: 22px;
-    background: #d9b341;
+    background: #e8d18d;
     z-index: -1;
 }
 .underline_heading h2{
