--- a/css/style.css
+++ b/css/style.css
@@ -339,15 +339,13 @@ img{
 }
 /*animations css end*/
 
-
-
-/* MAIN : START */
+/*main css start*/
 .main{
     width: 100%;
     overflow-x: hidden;
     padding-top: 100px;
 }
-/* MAIN : END */
+/*main css end*/
 
 /*header css start*/
 .site_header {
@@ -524,18 +522,109 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 .faq_section {
     padding-bottom: 120px;
 }
-
+.faq_section .blue_title_bg .heading_with_bg h3 {
+    color: #fff;
+}
+.faq_content {
+    padding: 30px;
+    background-color: #fff;
+}
+.faq_content h4 {
+    background-color: #d9b341;
+    border: 3px solid #d9b341;
+    margin: 0px !important;
+    border-radius: 0px;
+    outline: none;
+    padding: 8px 65px !important;
+    line-height: 26px;
+    font-size: 25px !important;
+    color: #ffffff;
+    position: relative !important;
+}
+.faq_content h4:before {
+    content: "Q";
+    line-height: 25px;
+    font-size: 25px !important;
+    color: #ffffff;
+    position: absolute;
+    left: 25px;
+    font-family: 'Yu Mincho';
+    top: 8px;
+}
+.faq_content .answer_content + h4 {
+    margin-top: 36px !important;
+}
+.faq_content h4 span.ui-accordion-header-icon {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    top: 0;
+    bottom: 0;
+    right: 15px;
+    margin: auto;
+    background: none !important;
+}
+.faq_content h4 span.ui-accordion-header-icon:before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    height: 1px;
+    margin: auto;
+    width: 100%;
+    background-color: #ffffff;
+    transform: rotate(90deg);
+    transition: all 0.4s;
+}
+.faq_content h4.ui-accordion-header-active span.ui-accordion-header-icon:before {
+    transform: rotate(0deg);
+}
+.faq_content h4 span.ui-accordion-header-icon:after {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    height: 1px;
+    margin: auto;
+    width: 100%;
+    background-color: #ffffff;
+}
+.faq_content.ui-accordion .answer_content.ui-accordion-content {
+    border: 3px solid #d9b341;
+    border-radius: 0px !important;
+}
+.answer_content p {
+    padding: 0px 35px 0px 30px !important;
+    font-family: 'Yu Mincho';
+    font-size: 16px;
+    color: #000000;
+    line-height: 24px;
+    position: relative;
+}
+.faq_content p:before {
+    content: "A";
+    line-height: 20px;
+    font-size: 20px !important;
+    color: #070069;
+    position: absolute;
+    left: -6px;
+    font-family: 'Yu Mincho';
+    top: 0px;
+}
 /*faq section css end*/
 
 /*responsive css start*/
 @media(max-width: 1166px) {
-    /* MAIN : START */
+    /*main css start*/
     .main{
         padding-top: 84px;
     }
-    /* MAIN : END */
-
-    /* HEADER|FOOTER : START */
+    /*main css end*/
+    /*header & footer css start*/
     .site_footer .custom_container,
     .site_header .custom_container {
         max-width: 900px;
@@ -551,21 +640,31 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
         font-size: 18px;
         line-height: 30px;
     }
-    /* HEADER|FOOTER : END */
+    /*header & footer css end*/
+    /*faq section css start*/
+    .faq_section {
+        padding-bottom: 70px;
+    }
+    /*faq section css start*/
+}
+@media(max-width: 1024px) {
+    /*faq section css start*/
+    .faq_content h4 {
+        font-size: 20px !important;
+    }
+    .faq_content h4:before {
+        line-height: 20px;
+        font-size: 20px !important;
+        left: 28px;
+        top: 10px;
+    }
+    .answer_content p {
+        padding: 0px 0px 0px 30px !important;
+    }
+    /*faq section css end*/
 }
 @media(max-width: 900px) {
-    /* HEADER|FOOTER : START */
-    .site_footer .custom_row {
-        flex-direction: column;
-    }
-    .site_footer .custom_row .custom_col {
-        max-width: 292px;
-        padding: 10px 0;
-        margin: auto;
-    }
-    .site_footer p, .site_footer a {
-        font-size: 16px;
-    }
+    /*header css start*/
     nav.custom_navbar {
         position: fixed;
         top: 0;
@@ -596,6 +695,19 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     .site_header .custom_navbar ul li a {
         font-size: 26px;
     }
+    /*header css end*/
+    /*footer css start*/
+    .site_footer .custom_row {
+        flex-direction: column;
+    }
+    .site_footer .custom_row .custom_col {
+        max-width: 292px;
+        padding: 10px 0;
+        margin: auto;
+    }
+    .site_footer p, .site_footer a {
+        font-size: 16px;
+    }
     .site_footer .footer_text {
         padding: 30px 0;
     }
@@ -605,24 +717,67 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     .site_footer .footer_text img {
         margin: 0 auto 10px;
     }
-    /* HEADER|FOOTER : END */
+    /*footer css end*/
+    /*faq section css start*/
+    .faq_section {
+        padding-bottom: 40px;
+    }
+    .faq_content {
+        padding: 20px;
+    }
+    .faq_content .answer_content + h4 {
+        margin-top: 25px !important;
+    }
+    /*faq section css start*/
 }
 @media (max-width: 675px){
-    /* MAIN :START */
+    /*main css start*/
     .main{
         padding-top: 60px;
     }
-    /* MAIN :END */
-    /* HEADER|FOOTER : START */
+    /*main css end*/
+    /*header css start*/
     .site_header {
         padding: 10px 0;
     }
     .site_header a.header_logo img {
         max-width: 200px;
     }
+    /*header css end*/
+    /*footer css start*/
     .footer_conpyright p {
         padding: 15px;
     }
-    /* HEADER|FOOTER : END */
+    /*footer css end*/
+    /*faq section css start*/
+    .faq_content {
+        padding: 15px;
+    }
+    .faq_content h4 {
+        padding: 8px 40px !important;
+        font-size: 18px !important;
+    }
+    .faq_content h4:before {
+        line-height: 18px;
+        font-size: 18px !important;
+        left: 12px;
+        top: 12px;
+    }
+    .faq_content .answer_content + h4 {
+        margin-top: 15px !important;
+    }
+    .answer_content p {
+        padding: 0px !important;
+    }
+    .faq_content p:before {
+        line-height: 18px;
+        font-size: 18px !important;
+        left: -22px;
+        top: 2px;
+    }
+    .faq_content h4 span.ui-accordion-header-icon {
+        right: 10px;
+    }
+    /*faq section css end*/
 }
 /*responsive css end*/
