--- a/css/style.css
+++ b/css/style.css
@@ -1685,11 +1685,11 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 }
 .achievment-layer .layer-img{
     flex: 1 0 0;
-    margin-bottom: 8px;
-    box-shadow: 8px 8px 0 #070069;
 }
 .achievment-layer .layer-img img{
     width: 100%;
+    margin-bottom: 8px;
+    box-shadow: 8px 8px 0 #070069;
 }
 .achievment-layer .layer-content{
     flex: 2 0 0;
@@ -1721,34 +1721,33 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
 }
 .achievment-layer .layer-content ul{
     width: 100%;
-    display: flex;
-    flex-wrap: wrap;
+    /* display: flex;
+    flex-wrap: wrap; */
     margin-top: 48px;
 }
 .achievment-layer .layer-content li{
     position: relative;
-    display: block;
-    flex: 0 0 33.33%;
-    max-width: 33.33%;
+    display: inline-block;
+    /* flex: 0 0 33.33%;
+    max-width: 33.33%; */
     margin-bottom: 50px;
     color: #070069;
     font-size: 16px;
     font-weight: 600;
     line-height: 1.8;
-}
-.achievment-layer .layer-content li span{
     position: relative;
     display: inline-block;
-    padding: 0 10px;
+    padding: 0 18px;
+    margin-right: 22px;
 }
-.achievment-layer .layer-content li span:before{
+.achievment-layer .layer-content li:before{
     content: '';
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
     width: 100%;
-    height: 5px;
+    height: 18%;
     background-color: #D9B341;
 }
 .achievment-layer .layer-content p{
@@ -2109,6 +2108,10 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     }
     .faq_section {
         padding-bottom: 70px;
+    }
+    .achievment-layer .layer-content li{
+        padding: 0 10px;
+        margin-right: 15px;
     }
 }
 @media(max-width: 1024px) {
@@ -2478,6 +2481,34 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
         padding: 0px 20px;
         font-size: 24px;
     }
+    .achievment-section{
+        padding-bottom: 50px;
+    }
+    .achievment-layer{
+        margin-bottom: 50px;
+    }
+    .achievment-layer .layer-head h3{
+        font-size: 22px;
+    }
+    .achievment-layer .layer-flex{
+        padding: 14px;
+    }
+    .achievment-layer .layer-content{
+        padding-left: 30px;
+    }
+    .achievment-layer .layer-content ul{
+        margin-top: 30px;
+    }
+    .achievment-layer .layer-content li{
+        margin-bottom: 30px;
+    }
+    .achievment-pagination ul li a{
+        font-size: 18px;
+    }
+    .achievment-pagination ul li a.next-bttn{
+        font-size: 22px;
+        padding: 0 5px;
+    }
 }
 @media(max-width: 675px) {
     .main{
@@ -2708,6 +2739,35 @@ header.site_header.home_page_nav.fixed_header .navbar_toggler .navbar_toggler_in
     }
     .faq_content h4 span.ui-accordion-header-icon {
         right: 10px;
+    }
+    .achievment-layer{
+        width: calc(100% - 10px);
+        box-shadow: 10px 10px 0 #a0a0a0;
+        border-width: 2px;
+    }
+    .achievment-layer .layer-flex{
+        flex-wrap: wrap;
+        padding: 10px;
+    }
+    .achievment-layer .layer-img {
+        flex: 0 0 100%;
+        max-width: calc(100% - 5px);
+        margin-bottom: 30px;
+    }
+    .achievment-layer .layer-img img {
+        margin-bottom: 5px;
+        box-shadow: 5px 5px 0 #070069;
+    }
+    .achievment-layer .layer-content {
+        padding-left: 0;
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .achievment-layer .layer-content h4{
+        padding: 0 5px;
+    }
+    .achievment-layer .layer-content li{
+        margin-bottom: 15px;
     }
 }
 /*responsive css end*/
